Added support for multi-interview

--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -18,7 +18,7 @@ play.crypto.secret="`]m5K5e?nkVQGVVV]Zu9fXDH=u7SX6C1u[IDNPOHrnN=jplo?Dt3MCcfg44]
 # application.global=global.Global
 
 # DataTags Storage Folder
-datatags.folder="public/questionnaire"
+taggingServer.models.folder="public/models/"
 
 
 play.http.session.cookieName=DATA_TAGGING_SERVER
