Server now uses updated format

--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-play.crypto.secret="`]m5K5e?nkVQGVVV]Zu9fXDH=u7SX6C1u[IDNPOHrnN=jplo?Dt3MCcfg44]2?Ro"
+play.http.secret.key="`]m5K5e?nkVQGVVV]Zu9fXDH=u7SX6C1u[IDNPOHrnN=jplo?Dt3MCcfg44]2?Ro"
 
 # The application languages
 # ~~~~~
@@ -20,5 +20,5 @@ play.crypto.secret="`]m5K5e?nkVQGVVV]Zu9fXDH=u7SX6C1u[IDNPOHrnN=jplo?Dt3MCcfg44]
 # DataTags Storage Folder
 taggingServer.models.folder="public/models/"
 
-
+play.filters.enabled=[]
 play.http.session.cookieName=POLICY_MODELS_MUFFIN
