--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -20,5 +20,7 @@ play.http.secret.key="`]m5K5e?nkVQGVVV]Zu9fXDH=u7SX6C1u[IDNPOHrnN=jplo?Dt3MCcfg4
 # DataTags Storage Folder
 taggingServer.models.folder="public/models/"
 
+taggingServer.visualizations.style="F11"
+
 play.filters.enabled=[]
 play.http.session.cookieName=POLICY_MODELS_MUFFIN
