added slick integration and basic get/list/enter for VersionedPolicyModels

--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -29,3 +29,17 @@ play.filters.enabled=[]
 play.http.session.cookieName=POLICY_MODELS_MUFFIN
 
 play.modules.enabled += actors.BindActors
+
+slick {
+  dbs {
+    default {
+      driver = "slick.driver.PostgresDriver$"
+      db {
+        driver = "org.postgresql.Driver"
+        url = "jdbc:postgresql://localhost:5432/policy_models"
+        user = "michael"
+        password = ""
+      }
+    }
+  }
+}
