Leftover session cookies deleted. PMVs can be updated with new files.

--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -21,7 +21,7 @@ play.http.secret.key="`]m5K5e?nkVQGVVV]Zu9fXDH=u7SX6C1u[IDNPOHrnN=jplo?Dt3MCcfg4
 taggingServer.models.folder="public/models/"
 taggingServer.visualize.folder="public/visualizations"
 taggingServer.model-uploads.folder="public/model-uploads"
-taggingServer.visualize.style="-style=f11 -show-ends"
+taggingServer.visualize.style="-style=f11"
 # taggingServer.visualize.pathToDot="C:\\Program Files (x86)\\Graphviz2.38\\bin\\dot.exe"
 taggingServer.visualize.pathToDot="/usr/local/bin/dot"
 
