--- a/datatags-app/conf/application-mor.conf
+++ b/datatags-app/conf/application-mor.conf
@@ -1,3 +1,14 @@
 include classpath("application.conf")
 
 taggingServer.visualize.pathToDot="C:\\Program Files (x86)\\Graphviz2.38\\bin\\dot.exe"
+slick {
+  dbs {
+    default {
+      driver = "slick.driver.PostgresDriver$"
+      db {
+        user = "postgres"
+        password = "a2mghqXv"
+      }
+    }
+  }
+}
