--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -50,3 +50,17 @@ play.assets {
   path = "/public"
   urlPrefix = "/assets"
 }
+
+play.mailer {
+  host = "example.com" // (mandatory)
+  port = 25 // (defaults to 25)
+  ssl = no // (defaults to no)
+  tls = no // (defaults to no)
+  tlsRequired = no // (defaults to no)
+  user = user // (optional)
+  password = null // (optional)
+  debug = no // (defaults to no, to take effect you also need to set the log level to "DEBUG" for the application logger)
+  timeout = null // (defaults to 60s in milliseconds)
+  connectiontimeout = null // (defaults to 60s in milliseconds)
+  mock = yes // (defaults to no, will only log all the email properties instead of sending an email)
+}
