changes from visualizations/*path to visualizations/name

--- a/datatags-app/conf/application-mor.conf
+++ b/datatags-app/conf/application-mor.conf
@@ -7,7 +7,7 @@ slick {
       driver = "slick.driver.PostgresDriver$"
       db {
         user = "postgres"
-        password = "a2mghqXv"
+        password = "pass"
       }
     }
   }
