--- a/SamplePoMoSClientApp/samplepomosclientapp/conf/application.conf
+++ b/SamplePoMoSClientApp/samplepomosclientapp/conf/application.conf
@@ -1,1 +1,7 @@
 # https://www.playframework.com/documentation/latest/Configuration
+
+# Use port 9001 be default, so that running this along with
+# PolicyModels server on the same machine is possible.
+play.server.http.port = 9001
+http.port = 9001
+
