--- a/datatags-app/conf/application-mor.conf
+++ b/datatags-app/conf/application-mor.conf
@@ -1,6 +1,6 @@
 include classpath("application.conf")
 
-taggingServer.visualize.pathToDot="C:\\Program Files (x86)\\Graphviz2.38\\bin\\dot.exe"
+taggingServer.visualize.pathToDot="/usr/bin/dot"
 slick {
   dbs {
     default {
