--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -19,7 +19,8 @@ play.http.secret.key="`]m5K5e?nkVQGVVV]Zu9fXDH=u7SX6C1u[IDNPOHrnN=jplo?Dt3MCcfg4
 
 # DataTags Storage Folder
 taggingServer.models.folder="public/models/"
-taggingServer.visualize.folder="public/visualizations"
+taggingServer.visualize.folder="public/models/"
+taggingServer.visualizations.folder="public/visualizations/"
 taggingServer.model-uploads.folder="public/model-uploads"
 taggingServer.visualize.style=""
 # taggingServer.visualize.style="-style=f11"
