application data moved outside of public (closes #72)

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,4 @@ DataTagsWebApp/scripts/username
 DataTagsWebApp/scripts/vars.sh
 /DataTagsWebApp/datatags-app-nb/datatags-app/nbproject/private/
 .idea
-datatags-app/public/visualizations/*
-datatags-app/public/model-uploads/*
+datatags-app/var/*
