--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -18,9 +18,8 @@ play.http.secret.key="`]m5K5e?nkVQGVVV]Zu9fXDH=u7SX6C1u[IDNPOHrnN=jplo?Dt3MCcfg4
 # application.global=global.Global
 
 # DataTags Storage Folder
-taggingServer.models.folder="public/models/"
-taggingServer.visualize.folder="public/visualizations/"
-taggingServer.model-uploads.folder="public/model-uploads"
+taggingServer.models.folder="var/models/"
+taggingServer.model-uploads.folder="var/model-uploads"
 taggingServer.visualize.style=""
 taggingServer.visualize.pathToDot="/usr/local/bin/dot"
 
