--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -62,3 +62,5 @@ play.mailer {
   connectiontimeout = null // (defaults to 60s in milliseconds)
   mock = yes // (defaults to no, will only log all the email properties instead of sending an email)
 }
+
+play.i18n.langs = [ "en", "he" ]
