--- a/scripts/policymodels-server.service
+++ b/scripts/policymodels-server.service
@@ -2,7 +2,9 @@
 
 [Unit]
 Description=PolicyModels Server
-After=syslog.target network.target
+Requires=postgresql.service
+After=syslog.target network.target postgresql.service
+
 
 [Service]
 ExecStart=/opt/policymodels/server/bin/policymodelswebapp -Dconfig.file=/opt/policymodels/server/conf/server.conf -Dpidfile.path=/opt/policymodels/server/RUNNING.pid -Dplay.evolutions.db.default.autoApply=true
