Moved to Scala 2.13

--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -24,7 +24,9 @@ taggingServer.visualize.style=""
 taggingServer.visualize.pathToDot="/usr/local/bin/dot"
 
 
-play.filters.enabled=[]
+play.filters.enabled = []
+play.filters.enabled += "play.filters.gzip.GzipFilter"
+
 play.http.session.cookieName=POLICY_MODELS_MUFFIN
 
 play.modules.enabled += actors.BindActors
