Updated DB connection, configuration validation on startup (closes #114)

--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -34,7 +34,7 @@ play.modules.enabled += actors.BindActors
 slick {
   dbs {
     default {
-      driver = "slick.driver.PostgresDriver$"
+      profile = "slick.jdbc.PostgresProfile$"
       db {
         driver = "org.postgresql.Driver"
           url = "jdbc:postgresql://localhost:5432/policy_models"
