Improved server documentation, mostly in the API area (closes #130)

--- a/SamplePoMoSClientApp/samplepomosclientapp/conf/application.conf
+++ b/SamplePoMoSClientApp/samplepomosclientapp/conf/application.conf
@@ -2,6 +2,6 @@
 
 # Use port 9001 be default, so that running this along with
 # PolicyModels server on the same machine is possible.
-play.server.http.port = 9001
-http.port = 9001
+play.server.http.port=9001
+//http.port = 9001
 
