--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -38,7 +38,7 @@ slick {
       db {
         driver = "org.postgresql.Driver"
           url = "jdbc:postgresql://localhost:5432/policy_models"
-        user = "michael"
+        user = "policy_models_user"
         password = ""
       }
     }
