Added Docker dev env

--- a/datatags-app/conf/application.conf
+++ b/datatags-app/conf/application.conf
@@ -38,8 +38,8 @@ slick {
       db {
           driver = "org.postgresql.Driver"
              url = "jdbc:postgresql://localhost:5432/policy_models"
-            user = "policy_models_user"
-        password = ""
+            user = "policy_models"
+        password = "policy_models"
       }
     }
   }
